# nyaa

./: .envrc  .gitignore  .gitmodules  CATEGORIES.md  CHANGELOG.md  Cargo.toml  KEYS.md  README.md  config.schema.json  default.nix  docker-compose.yml  flake.nix  justfile  makefile  publish.py  shell.nix  theme.schema.json  themes.tape  tty.tape
.cargo/: config.toml
.default-config/: keybinds.toml
.github/workflows/: nix.yml  rust.yml
docker-deb/: init.sh
docs/: categories.md  cli.md  clipboard.md  columns.md  default-app.md  download.md  general_config.md  home-manager.md  keybinds.md  notifications.md  qBittorrent.md  rqbit.md  run-command.md  transmission.md  user_themes.md
docs/clients/: default-app.md  default_app.md  download.md  download_torrent_file.md  qBittorrent.md  rqbit.md  run-command.md  run_command.md  transmission.md
docs/sources/: nyaa.md  sukebei.md  torrent_galaxy.md
examples/: config.toml
examples/themes/: catppuccin-macchiato.toml  default.toml  dracula.toml  gruvbox.toml
modules/: home-manager-snake.nix  home-manager.nix
modules/clients/: default.nix  other.nix  qBittorrent.nix  rqbit.nix  transmission.nix
modules/sources/: default.nix  nyaa.nix  sukebei.nix  torrentgalaxy.nix
scripts/: docker-compose.yml  notes.sh  tgx.tape  tty.tape
scripts/docker-deb/: init.sh
src/: action.rs  animate.rs  app.rs  cli.rs  client.rs  clip.rs  color.rs  components.rs  config.rs  keys.rs  lib.rs  logging.rs  macros.rs  main.rs  nyaa.rs  result.rs  results.rs  source.rs  sources.rs  sync.rs  theme.rs  themes.rs  tui.rs  ui.rs  util.rs  widget.rs  widgets.rs
src/animate/: growth.rs  transition.rs  translate.rs
src/client/: cmd.rs  default_app.rs  download.rs  qbit.rs  rqbit.rs  transmission.rs
src/components/: actions_temp.rs  home.rs  popups.rs  results.rs  search.rs
src/components/popups/: category.rs  command_runner.rs  download_client.rs  notification.rs  which_key.rs
src/nyaa/: config.rs
src/source/: nyaa_html.rs  nyaa_rss.rs  sukebei_nyaa.rs  torrent_galaxy.rs
src/sources/: nyaa.rs
src/util/: cmd.rs  colors.rs  conv.rs  html.rs  strings.rs  term.rs  types.rs
src/widget/: batch.rs  captcha.rs  category.rs  clients.rs  error.rs  filter.rs  help.rs  input.rs  notifications.rs  notify_box.rs  page.rs  results.rs  search.rs  sort.rs  sources.rs  theme.rs  themes.rs  user.rs
src/widgets/: clear_overlap.rs  dim.rs
test/: cmd.tape  download.tape
tests/: input.rs  popups.rs
tests-old/: query.rs
tests-old/common/: mod.rs
tests-old/config/themes/: dracula2.toml
tests/common/: mod.rs
tests/config/themes/: dracula2.toml
