[package]
name = "nyaa"
version = "0.9.0"
edition = "2021"
rust-version = "1.75"
categories = ["command-line-utilities"]
keywords = ["tui", "cli", "nyaa", "torrent", "download"]
description = "A tui tool for browsing and downloading torrents from nyaa.si"
readme = "README.md"
repository = "https://github.com/Beastwick18/nyaa/"
license = "GPL-3.0-or-later"

[profile.release]
strip = true
lto = true

[dependencies]
reqwest = { version = "0.12.4", features = [
    "gzip",
    "rustls-tls",
    "socks",
    "cookies",
], default-features = false }
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-util = "0.7.11"
urlencoding = "2.1.3"
ratatui = "0.26.3"
textwrap = "0.16.1"
crossterm = "0.27.0"
unicode-width = "0.1.13"
unicode-segmentation = "1.11.0"
toml = "0.8.14"
directories = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
scraper = "0.19.0"
regex = "1.10.4"
rss = "2.0.8"
chrono = "0.4.38"
transmission-rpc = { git = "https://github.com/Beastwick18/transmission-rpc", branch = "stable" }
open = "5.1.4"
cli-clipboard = "0.4.0"
dirs = "5.0.1"
shellexpand = "3.1.0"
indexmap = "2.2.6"
color-to-tui = "0.3.0"
human_bytes = "0.4.3"
strum = "0.26.2"
ratatui-image = { version = "1.0.1", optional = true }
image = { version = "0.25.1", optional = true }

[lib]
name = "nyaa"
path = "src/lib.rs"

[features]
captcha = ["dep:ratatui-image", "dep:image"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["signal"] }

[package.metadata.deb]
maintainer = "Steven Culwell <bradculwell@pm.me>"
copyright = "2024, Steven Culwell <bradculwell@pm.me>"
license-file = ["LICENSE", "4"]
extended-description = """A nyaa.si tui tool for browsing and downloading torrents"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/nyaa",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/nyaa/README",
        "644",
    ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/nyaa", dest = "/usr/bin/nyaa", mode = "755" },
]
